scrollbar fix

--- a/components/Hero.module.css
+++ b/components/Hero.module.css
@@ -25,7 +25,7 @@
     align-content: flex-end;
 
     border-radius: 12px;
-    overflow: scroll;
+    overflow: hidden;
 
 
     background-color: lightgray;
